# english_quiz

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Readme.md  compose.prod.yaml  compose.yaml  conftest.py  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: deploy.yml
accounts/: admin.py  forms.py  managers.py  models.py
accounts/migrations/: 0001_initial.py
apps/accounts/: admin.py  managers.py  models.py  views.py
apps/catalog/: admin.py  models.py  views.py
apps/common/: emoji.py  models.py  tasks.py  tts.py  webapp_auth.py
apps/learning/: admin.py  apps.py  models.py  tasks.py
apps/quiz/: admin.py  apps.py  models.py
apps/relations/: admin.py  apps.py  models.py  tasks.py
assets/: tailwind.css
bot/: __main__.py  config.py  factory.py  quiz_control.py  runner_group_quiz.py  sender.py  strings.py  validators.py
bot/handlers/: books.py  common.py  daily.py  group_quiz.py  guardian.py  leaderboard.py  menu.py  onboarding.py  quiz.py  quiz_control.py  quiz_practice.py  relations.py  settings.py  start.py  words.py
bot/keyboards/: books.py  common.py  group_quiz.py  guardian.py  menu.py  onboarding.py  quiz_practice.py  relations.py  settings.py  words.py
bot/middlewares/: user.py
bot/services/: users.py
bot/states/: onboarding.py  quiz.py
bot/tests/: conftest.py  test_config.py  test_factory.py  (+30 more)
config/: celery.py  urls.py
data/: book1.json  book2.json  book3.json  book4.json  book5.json  book6.json
scripts/: entrypoint.sh
src/: settings.py  urls.py
words/: admin.py  utils.py
(+157 files in other folders)
